...
    init() {
        options = [
            .init(title: "title_menu_members".localized().capitalizingFirstLetter(),
                  image: .init(systemName: "person.crop.circle.badge.plus"),
                  color: FHKColor.wine,
                  menuType: .members,
                  identifier: "btn_menu_member_id"),
            
                .init(title: "title_menu_tasks".localized().capitalizingFirstLetter(),
                      image: .init(systemName: "house"),
                      color: FHKColor.wine.opacity(0.8),
                      menuType: .tasks,
                      identifier: "btn_menu_tasks_id"),
...
