...
                    
                case .rewards:
                    router.navigate(to: .rewards)
                }
                print(index)
            })
            .accessibilityIdentifier("btn_float_menu_id")
            
            Spacer()
        }
    }
}

...
