appId: com.fleon.fintechKids
---

- launchApp:
    clearState: true

- extendedWaitUntil:
    visible:
        text: "Permitir|Allow"
    timeout: 30000

# Captura 1: nada más abrir
- takeScreenshot: .maestro/screenshots/start

- tapOn: 
    text: "Permitir|Allow"


# Esperar 5 segundos por si hay popups
- swipe:
    direction: UP

# Captura 2: después de 5 segundos
- takeScreenshot: .maestro/screenshots/after-5-seconds

# Subimos a 30000ms (30s) para soportar el arranque en frío de la CI
- extendedWaitUntil:
    visible:
        id: "select_language_title_id"
    timeout: 30000

# Pulsamos el botón del menú
- tapOn:
    id: "menu_selected_language_id"

# Subimos a 10000ms (10s) por si la animación de las banderas va lenta en la CI
- extendedWaitUntil:
    visible:
        id: "option_language_id"
    timeout: 10000

# Seleccionamos el idioma del ForEach
- tapOn:
    id: "option_language_id"

# Avanzamos en el flujo usando el botón
- tapOn:
    id: "btn_language_continue_id"